			  PyEphem CHANGELOG

Version 3.7.2b (2007 September)

  - Improved accuracy when a fixed body is repeatedly precessed to
    different dates, by caching its original position unchanged.

Version 3.7.2a (2007 June)

  - Upgraded to the libastro from XEphem 3.7.2.

  - Should now compile under Windows!

  - Bugfix: rewrote date-and-time parsing to avoid the use of
    sscanf(), which was breaking under Windows and requiring the
    insertion of a leading space to succeed.

  - Improved the error returned when a date string cannot be parsed,
    so that it now quotes the objectionable string (so you can tell
    which of several date strings on the same line gave an error!).

Version 3.7b  (2005 August 25)

  - Bugfix: in the underlying library, earth satellite objects do not
    support "SOLSYS" attributes like "sun_distance"; so EarthSatellite
    must inherit from Body rather than Planet (and lose several
    attributes, which were returning nonsense values).

Version 3.7a  (2005 August 22)

  - Upgraded to the libastro from XEphem 3.7.

  - Bugfix: after creating an earth satellite and calling compute(),
    some attributes (including "sublat" and "sublong") would always
    equal zero until you had accessed a more mainstream attribute
    (like "ra" or "dec"); now all attributes should return correct
    values on their first access.

  - Bugfix: the sidereal_time() function of an Observer now returns a
    correct floating-point number that measures in radians, rather
    than a number in the range [0,1).

  - The Observer now has an radec_of(az=, alt=) function that returns
    the right ascension and declination of a point in the sky.

  - You can normalize an Angle into the range [0,2pi) by requesting
    the attribute ".norm".

  - Earth satellite objects read in from TLE files now retain their
    TLE catalog number as an attribute "catalog_number".

  - Uninitialized bodies now start off with None for their name,
    rather than the string "unnamed".
